feat(model): user model, service, controller, and router
